fixes paint bucket icon alignment with button (FINALLY!)

--- a/style.css
+++ b/style.css
@@ -60,6 +60,13 @@ html {
 --accent-950: #040f16;
 }
 
+#stars-img {
+    min-width: 250px;
+}
+
+#turtle-img {
+    min-width: 250px;
+}
 
 *{
     /* border: 1px solid red; */
@@ -148,7 +155,6 @@ img{
     margin-top: 1vw ;
     margin-bottom: 1vw;
     max-width: 100vw ;
-    min-width: 250px;
 }
 
 .align-center {
@@ -275,7 +281,7 @@ canvas {
 
 #menu-icon {
     height: 100%;
-    width: 0;
+    width: 100%;
     margin: 0;
 }
 
